# message-relay-backend

./: .bandit  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yaml  develop-ci.yaml  develop-deploy.yaml
app/integrations/email/: __init__.py  email.py  mailgun.py  sendgrid.py
app/modules/email/: factory.py  routes.py
app/modules/messages/services/: message_factory.py
docs/: architecture.md  local_dev.md
docs/integrations/email/: mailgun.md  readme.md  sendgrid.md
terraform/: .terraform.lock.hcl  iam.tf  locals.tf  main.tf  versions.tf  workload-identity.tf
terraform/.terraform/: terraform.tfstate
