[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Brandon Braner <brandon.braner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
asyncpg = "^0.26.0"
SQLAlchemy = "^1.4.39"
alembic = "^1.8.1"
gunicorn = "^20.1.0"
psycopg = "^3.0.15"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
